--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container">
-    <app-recipe-list></app-recipe-list>
+    <router-outlet></router-outlet>
 </div>
