--- a/src/app/recipe-form/recipe-form.component.html
+++ b/src/app/recipe-form/recipe-form.component.html
@@ -1,1 +1,49 @@
-<p>recipe-form works!</p>
+<div class="col-sm-8 col-sm-offset-2">
+    <h2>Ajouter une recette</h2>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmitForm()">
+        <div class="form-group">
+            <label for="name">Nom</label>
+            <input type="text" id="name" class="form-control" formControlName="name">
+        </div>
+
+        <div formArrayName="ingredients">
+            <h4>Ingrédients</h4>
+            <div  *ngFor="let ingredientControl of getIngredientsControls().controls, let i = index">
+                <div [formGroupName]="i" class="form-row align-items-end">
+                    <div class="form-group col-sm-2">
+                        <label for="quantity">Quantité</label>
+                        <input type="number" class="form-control" formControlName="quantity">
+                    </div>
+                    <div class="form-group col-sm-6">
+                        <label for="name">Nom</label>
+                        <input type="text" class="form-control" formControlName="name">    
+                    </div>
+                    <div class="form-group col-sm-2">
+                        <button class="btn btn-danger" type="button" (click)="onRemoveIngredient(i)">Supprimer</button>
+                    </div>
+                </div>
+
+                
+            </div>
+            <button class="btn btn-success" type="button" (click)="onAddIngredient()">Ajouter un ingrédients</button>
+        </div>
+
+        <div formArrayName="instructions">
+            <h4>Instructions</h4>
+            <div class="form-row" *ngFor="let instructionControl of getInstructionsControls().controls, let i = index">
+                <div class="form-group col-sm-10">
+                    <input type="text" class="form-control" [formControlName]="i">
+                </div>
+                <div class="form-group col-sm-2">
+                    <button class="btn btn-danger" type="button" (click)="onRemoveInstruction(i)">Supprimer</button>
+                </div>
+                
+            </div>
+            <button class="btn btn-success" type="button" (click)="onAddInstruction()">Ajouter une instruction</button>
+        </div>
+
+        <button type="submit" class="btn btn-primary" [disabled]="recipeForm.invalid">Ajouter</button>
+
+        <div class="text-success" *ngIf="success">Recette ajoutée ! Vous allez être redirigé vers la page accueil...</div>
+    </form>
+</div>
