--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -1,11 +1,7 @@
-<h3>{{ name }}</h3>
-
-<ul>
-    <h4>Ingrédients :</h4>
-    <li *ngFor="let ingredient of ingredients">{{ ingredient.name }}</li>
-</ul>
-
-<ul>
-    <h4>Instructions :</h4>
-    <li *ngFor="let instruction of instructions">{{ instruction }}</li>
-</ul>
+<div class="card mb-3">
+    <img class="card-img-top" src="https://via.placeholder.com/300x150" alt="Placeholder Recipe Picture">
+    <div class="card-body">
+        <h5 class="card-title">{{ name }}</h5>
+        <h6 class="card-subtitle text-muted">Date</h6>
+    </div>
+</div>
