--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,13 +1,15 @@
 <div class="row">
-    <div class="col-xs-12">
+    <div class="col-12">
         <h2>Recettes</h2>
-        <div class="list-group">
-            <app-recipe-card 
-                class="list-group-item"
-                *ngFor="let recipe of recipes"
-                [name]="recipe.name"
-                [ingredients]="recipe.ingredients"
-                [instructions]="recipe.instructions"></app-recipe-card>
+        
+        <div class="card-deck justify-content-center">
+            <app-recipe-card
+            *ngFor="let recipe of recipes"
+            [name]="recipe.name"
+            [ingredients]="recipe.ingredients"
+            [instructions]="recipe.instructions"></app-recipe-card>
         </div>
+        
+        
     </div>
 </div>
