feat: show recipe details

--- a/src/app/recipe-card/recipe-card.component.html
+++ b/src/app/recipe-card/recipe-card.component.html
@@ -3,5 +3,7 @@
     <div class="card-body">
         <h5 class="card-title">{{ name }}</h5>
         <h6 class="card-subtitle text-muted">Date</h6>
+        <a class="stretched-link" style="cursor: pointer;" (click)="onViewRecipe(id)"></a>
     </div>
+    
 </div>
