feat: add ingredient with measure

--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -5,7 +5,7 @@
         <ul>
             <h4>Ingrédients</h4>
             <li *ngFor="let ingredient of recipe.ingredients">
-                {{ ingredient.quantity }} {{ ingredient.name }}
+                {{ ingredient.quantity }} {{ ingredient.measure }} {{ ingredient.name }}
             </li>
         </ul>
         <ol>
