--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,8 @@
             <a class="nav-item nav-link" routerLink="add" routerLinkActive="active">Ajouter une recette</a>
         </div>
         <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" routerLink="auth/signin" routerLinkActive="active">Se connecter</a>
+            <a class="nav-item nav-link" routerLink="auth/signin" routerLinkActive="active" *ngIf="!isAuth">Se connecter</a>
+            <a class="nav-item nav-link" *ngIf="isAuth" (click)="onSignOut()">Déconnexion</a>
         </div>
     </div>
 </nav>
