update:design: change "Ajouter une recette" -> "Proposer une recette"

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse">
         <div class="navbar-nav">
             <a class="nav-item nav-link" routerLink="" routerLinkActive="active">Recettes</a>
-            <a class="nav-item nav-link" routerLink="add" routerLinkActive="active">Ajouter une recette</a>
+            <a class="nav-item nav-link" routerLink="add" routerLinkActive="active">Proposer une recette</a>
         </div>
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" routerLink="auth/signin" routerLinkActive="active" *ngIf="!isAuth">Se connecter</a>
