--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,6 +4,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link" routerLink="" routerLinkActive="active">Recettes</a>
             <a class="nav-item nav-link" routerLink="add" routerLinkActive="active">Proposer une recette</a>
+            <a class="nav-item nav-link" routerLink="review" routerLinkActive="active" *ngIf="isAuth">Examiner les propositions</a>
         </div>
         <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" routerLink="auth/signin" routerLinkActive="active" *ngIf="!isAuth">Se connecter</a>
