--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -8,6 +8,7 @@
             [name]="recipe.name"
             [ingredients]="recipe.ingredients"
             [instructions]="recipe.instructions"
+            [date]="recipe.date"
             [id]="i"></app-recipe-card>
         </div>
         
