--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col">
         <h3>{{ recipe.name }}</h3>
+        <p>{{ recipe.date | date:"d MMMM yyyy"}}</p>
         <img src="https://via.placeholder.com/300x150" alt="Placeholder Recipe Picture">
         <ul>
             <h4>Ingrédients</h4>
