--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12">
+    <div class="col">
         <h2>Recettes</h2>
         
         <div class="card-deck justify-content-center">
