--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">
     <div class="col">
         <h2>Recettes</h2>
         
@@ -9,6 +9,8 @@
             [ingredients]="recipe.ingredients"
             [instructions]="recipe.instructions"
             [date]="recipe.date"
+            [photo]="recipe.photo"
+            [isValidated]="recipe.isValidated"
             [id]="i"></app-recipe-card>
         </div>
         
