--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,5 +1,5 @@
-<div class="row">
-    <div class="col-lg-3 col-sm-12">
+<div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">
+    <div class="col-lg-6 col-sm-6">
         <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
             <h3>Connexion</h3>
             <div class="form-group">
