--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-light shadow-sm">
+<nav class="navbar navbar-expand-md navbar-light bg-light shadow-sm mb-4">
     <div class="container">
         <span class="navbar-brand">RecetteTracker</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -6,12 +6,12 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" routerLink="" routerLinkActive="active">Recettes</a>
-                <a class="nav-item nav-link" routerLink="add" routerLinkActive="active">Proposer une recette</a>
-                <a class="nav-item nav-link" routerLink="review" routerLinkActive="active" *ngIf="isAuth">Examiner les propositions</a>
+                <a class="nav-item nav-link" routerLink="">Recettes</a>
+                <a class="nav-item nav-link" routerLink="add">Proposer une recette</a>
+                <a class="nav-item nav-link" routerLink="review" *ngIf="isAuth">Examiner les propositions</a>
             </div>
             <div class="navbar-nav ml-auto">
-                <a class="nav-item nav-link" routerLink="auth/signin" routerLinkActive="active" *ngIf="!isAuth">Se connecter</a>
+                <a class="nav-item nav-link" routerLink="auth/signin" *ngIf="!isAuth">Se connecter</a>
                 <a class="nav-item nav-link" style="cursor: pointer;" *ngIf="isAuth" (click)="onSignOut()">Déconnexion</a>
             </div>
         </div>
