--- a/src/app/recipe-form/recipe-form.component.html
+++ b/src/app/recipe-form/recipe-form.component.html
@@ -1,56 +1,63 @@
-<div class="col-sm-8 col-sm-offset-2">
-    <h2>Proposer une recette</h2>
-    <form [formGroup]="recipeForm" (ngSubmit)="onSubmitForm()">
-        <div class="form-group">
-            <label for="name">Nom</label>
-            <input type="text" id="name" class="form-control" formControlName="name">
-        </div>
-
-        <div formArrayName="ingredients">
-            <h4>Ingrédients</h4>
-            <div  *ngFor="let ingredientControl of getIngredientsControls().controls, let i = index">
-                <div [formGroupName]="i" class="form-row align-items-end">
-                    <div class="form-group col-sm-2">
-                        <label for="quantity">Quantité</label>
-                        <input type="number" class="form-control" formControlName="quantity">
-                    </div>
-                    <div class="form-group col-sm-2">
-                        <label for="measure">Mesure</label>
-                        <select class="form-control" formControlName="measure">
-                            <option *ngFor="let measure of onSelectMeasure()"
-                            [ngValue]="measure">{{ measure }}</option>
-                        </select>
-                    </div>                    
-                    <div class="form-group col-sm-6">
-                        <label for="name">Nom</label>
-                        <input type="text" class="form-control" formControlName="name">    
-                    </div>
-                    <div class="form-group col-sm-2">
-                        <button class="btn btn-danger" type="button" (click)="onRemoveIngredient(i)">Supprimer</button>
-                    </div>
-                </div>
-
-                
+<div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">
+    <div class="col-sm-8 col-sm-offset-2">
+        <h2>Proposer une recette</h2>
+        <form [formGroup]="recipeForm" (ngSubmit)="onSubmitForm()">
+            <div class="form-group">
+                <label for="name">Nom</label>
+                <input type="text" id="name" class="form-control" formControlName="name">
             </div>
-            <button class="btn btn-success" type="button" (click)="onAddIngredient()">Ajouter un ingrédients</button>
-        </div>
 
-        <div formArrayName="instructions">
-            <h4>Instructions</h4>
-            <div class="form-row" *ngFor="let instructionControl of getInstructionsControls().controls, let i = index">
-                <div class="form-group col-sm-10">
-                    <input type="text" class="form-control" [formControlName]="i">
-                </div>
-                <div class="form-group col-sm-2">
-                    <button class="btn btn-danger" type="button" (click)="onRemoveInstruction(i)">Supprimer</button>
+            <div class="form-group">
+                <label for="picture">Photo</label>
+                <input class="form-control" type="file" accept="image/*" (change)="detectFiles($event)">
+            </div>
+
+            <div formArrayName="ingredients">
+                <h4>Ingrédients <button class="btn btn-success" type="button" (click)="onAddIngredient()">Ajouter un ingrédients</button></h4>
+                <div  *ngFor="let ingredientControl of getIngredientsControls().controls, let i = index">
+                    <div [formGroupName]="i" class="form-row align-items-end">
+                        <div class="form-group col-sm-2">
+                            <label for="quantity">Quantité</label>
+                            <input type="number" class="form-control" formControlName="quantity">
+                        </div>
+                        <div class="form-group col-sm-2">
+                            <label for="measure">Mesure</label>
+                            <select class="form-control" formControlName="measure">
+                                <option *ngFor="let measure of onSelectMeasure()"
+                                [ngValue]="measure">{{ measure }}</option>
+                            </select>
+                        </div>                    
+                        <div class="form-group col-sm-6">
+                            <label for="name">Nom</label>
+                            <input type="text" class="form-control" formControlName="name">    
+                        </div>
+                        <div class="form-group col-sm-2">
+                            <button class="btn btn-danger" type="button" (click)="onRemoveIngredient(i)">Supprimer</button>
+                        </div>
+                    </div>
+
+                    
                 </div>
                 
             </div>
-            <button class="btn btn-success" type="button" (click)="onAddInstruction()">Ajouter une instruction</button>
-        </div>
 
-        <button type="submit" class="btn btn-primary" [disabled]="recipeForm.invalid">Proposer</button>
+            <div formArrayName="instructions">
+                <h4>Instructions <button class="btn btn-success" type="button" (click)="onAddInstruction()">Ajouter une instruction</button></h4>
+                <div class="form-row" *ngFor="let instructionControl of getInstructionsControls().controls, let i = index">
+                    <div class="form-group col-sm-10">
+                        <input type="text" class="form-control" [formControlName]="i">
+                    </div>
+                    <div class="form-group col-sm-2">
+                        <button class="btn btn-danger" type="button" (click)="onRemoveInstruction(i)">Supprimer</button>
+                    </div>
+                    
+                </div>
+                
+            </div>
 
-        <div class="text-success" *ngIf="success">Recette proposée à l'administrateur ! Vous allez être redirigé vers la page accueil...</div>
-    </form>
+            <button type="submit" class="btn btn-primary" [disabled]="recipeForm.invalid">Proposer</button>
+
+            <div class="text-success" *ngIf="success">Recette proposée à l'administrateur ! Vous allez être redirigé vers la page accueil...</div>
+        </form>
+    </div>
 </div>
