--- a/src/app/review-list/review-list.component.html
+++ b/src/app/review-list/review-list.component.html
@@ -1,16 +1,16 @@
-<div class="row">
-    <div class="col-12">
+<div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">
+    <div class="col-12 col-lg-8">
         <h2>Propositions de recettes</h2>
 
-        <ul>
-            <li *ngFor="let recipe of recipes; let i = index">{{ recipe.name }} | Status :
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item" *ngFor="let recipe of recipes; let i = index">{{ recipe.name }} - Status :
                 <ng-container *ngIf="recipe.isValidated; else elseblock">
                     <span class="text-success">Validé</span>
                 </ng-container>
                 <ng-template #elseblock>
                     <span class="text-danger">Non examiné</span>
                 </ng-template>
-                <button class="btn btn-primary" type="button" (click)="onViewReview(i)">Examiner</button>
+                <button class="btn btn-primary float-right" type="button" (click)="onViewReview(i)">Examiner</button>
             </li>
         </ul>
     </div>
