--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -1,6 +1,6 @@
+<a class="btn btn-secondary btn-sm" routerLink="">Retour</a>
 <h3 class="text-center">{{ recipe.name }}</h3>
 <span class="text-muted">{{ recipe.date | date:"d MMMM yyyy"}}</span>
-
 <div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">
     
     <div class="col-lg-4 col-sm-12 order-lg-1 order-sm-2 order-2">
