--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,3 +1,14 @@
+<div class="row justify-content-center">
+    <div class="col-lg-6 col-md-6">
+        <form class="input-group input-group-sm" [formGroup]="searchForm" (ngSubmit)="onSearch()">
+            <input class="form-control" type="search" formControlName="search" placeholder="Recherche...">
+            <div class="input-group-append">
+                <button type="submit" class="btn btn-outline-secondary"><i class="fas fa-search"></i></button>
+            </div>
+            
+        </form>
+    </div>
+</div>
 <div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">
     <div class="col">
         <h2>Recettes</h2>
