fix: change "review" to "reviews"

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" routerLink="">Recettes</a>
                 <a class="nav-item nav-link" routerLink="add">Proposer une recette</a>
-                <a class="nav-item nav-link" routerLink="review" *ngIf="isAuth">Examiner les propositions</a>
+                <a class="nav-item nav-link" routerLink="reviews" *ngIf="isAuth">Examiner les propositions</a>
             </div>
             <div class="navbar-nav ml-auto">
                 <a class="nav-item nav-link" routerLink="auth/signin" *ngIf="!isAuth">Se connecter</a>
