--- a/src/app/review-detail/review-detail.component.html
+++ b/src/app/review-detail/review-detail.component.html
@@ -1,4 +1,4 @@
-<a class="btn btn-secondary btn-sm" routerLink="/review">Retour</a>
+<a class="btn btn-secondary btn-sm" routerLink="/reviews">Retour</a>
 
 <div class="row justify-content-lg-center justify-content-md-center justify-content-sm-center">    
     <div class="col-lg-10">
